tests/src/frontend/typechecking/invalid/strict_upper_bound_help_1.sk
base class A() {
  children =
  | B
  | C
}

fun no(): void {
  v = mutable Vector[];
  v.push(B());
  v.push(C())
}
